This Magazine is Haunted

--- a/kb.html
+++ b/kb.html
@@ -12218,6 +12218,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>This Magazine is Haunted</td>
+<td>1951</td>
+<td>Fawcett</td>
+<td><a href="ThisMagazineIsHaunted/ThisMagazineIsHaunted.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Thor</td>
 <td>1962</td>
 <td>Marvel</td>
