--- a/kb.html
+++ b/kb.html
@@ -10839,6 +10839,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Secret Agent X9</td>
+<td>1934</td>
+<td>King Features</td>
+<td><a href="SecretAgentX9/SecretAgentX9.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Secret Avengers</td>
 <td>2010</td>
 <td>Marvel</td>
