--- a/A1/A1.html
+++ b/A1/A1.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="A1Atomeka.jpg"> <br>
+<img src="A1Atomeka1.jpg"> <br>
 Series: Atomecka vol.1, 6 book mini series, Epic 4 issues. Atomecka vol.2 = unknown<br>
 Publisher: 1989 to 1992 by Atomecka, 1992 by Epic, 2004 Atomecka</a> <br>
 <p>
@@ -20,14 +20,30 @@ Publisher: 1989 to 1992 by Atomecka, 1992 by Epic, 2004 Atomecka</a> <br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="A1Atomeka.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Atomeka1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="A1Atomeka2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Atomeka2b.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="A1Atomeka3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="A1Atomeka4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="A1Atomeka5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="A1Atomeka6.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="A1Atomekavol2_1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="A1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1Titan16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="A1_1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="A1_2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="A1_3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="A1_4.jpg"></div>
