adventures luther arkwright

--- a/AdventuresLutherArkwright/AdventuresLutherArkwright.html
+++ b/AdventuresLutherArkwright/AdventuresLutherArkwright.html
@@ -2,26 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Adventures of Luther Arkwright</title>
 </head>
 
 <body>
-<h2>Adventures of Luther Arkwright</h2>
-<img src="AdventuresLutherArkwright01.jpg"> 
-<img src="AdventuresLutherArkwright02.jpg"> 
-<img src="AdventuresLutherArkwright03.jpg"> 
-<img src="AdventuresLutherArkwright04.jpg"> 
-<img src="AdventuresLutherArkwright05.jpg"> 
-<img src="AdventuresLutherArkwright06.jpg"> 
-<img src="AdventuresLutherArkwright07.jpg"> 
-<img src="AdventuresLutherArkwright08.jpg"> 
-<img src="AdventuresLutherArkwright09.jpg"> <br>
+
+<img src="AdventuresLutherArkwright01.jpg"><br>
 Series: 9 issues series <br>
 Illustrator: Bryan Talbot<br>
 Writer: Bryan Talbot<br>
 Publisher: 1978-1989 Valkyrie Press, reprinted 1990 by Dark Horse with Introduction by Alan Moore.<br>
 <p>
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AdventuresLutherArkwright01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresLutherArkwright02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresLutherArkwright03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresLutherArkwright04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresLutherArkwright05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresLutherArkwright06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresLutherArkwright07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresLutherArkwright08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresLutherArkwright09.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 About: The story is adult in tone, with many mythological, historical and political references. Its genesis owes something to Michael Moorcock's Jerry Cornelius stories, though Moorcock and Talbot agree that the similarities between the characters are limited. 
 </p><p>
 Warren Ellis calls Arkwright "probably the single most influential graphic novel to have come out of Britain to date... probably Anglophone comics' single most important experimental work."<br>
