--- a/AccidentMan/accidentman.html
+++ b/AccidentMan/accidentman.html
@@ -2,18 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Accident Man</title>
 </head>
 
 <body>
-<img src="accidentman1.jpg"> <img src="accidentman2.jpg"> <img src="accidentman3.jpg"><br>
+<img src="accidentman1.jpg"><br>
 Series: 3 issue mini series 1993<br>
 Issues: Three issue mini series<br>
 Publisher: Toxic, Dark Horse, Titan</a> <br>
 Illustrators: Howard Chaykin, Duke Mighten<br>
 Writers: Pat Mills, Tony Skinner<br> 
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="accidentman1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="accidentman2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="accidentman3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="accidentman4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 About: Accident Man is a character from the defunct monthly UK comic Toxic! written by the comic writer Pat Mills in the early 1990s, also a three-issue mini series published by Dark Horse comics in 1993. In March 2014 The Complete Accident Man was published in hardback by Titan Comics.
 </p><p>
 Story:
