--- a/AbrahamStone/AbrahamStone.html
+++ b/AbrahamStone/AbrahamStone.html
@@ -2,19 +2,33 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Abraham Stone</title>
 </head>
 
 <body>
-<h2>Abraham Stone</h2>
-<img src="AbrahamStone1.jpg"> <img src="AbrahamStone2.jpg"> <br>
-Series: 2 issue mini series<br>
-Issues: #1 Radix Malorum, # 2 The Revolution<br>
+<img src="AbrahamStone1.jpg"><br>
+2 issue mini series, #1 Radix Malorum, # 2 The Revolution<br>
 Publisher: 1995 Epic/Marvel</a> <br>
-Illustrators: Joe Kubert<br>
-Writers: Joe Kubert <br> 
+Writer and Illustrator: Joe Kubert<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AbrahamStone1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbrahamStone2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbrahamStone3.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 About: Rural steadfast Abraham Stone seeks destiny and vengeance in early 20th century New York City with mobsters, Hollywood, Pancho Villa, and more. Based on actual events.
 </p><p>
 Story: Stone saves a rich lady from being robbed. She is the owner of a film studio, and she takes Stone to California to be her kept man and to work in silent films. He acts in a number of films but is unhappy in Hollywood. He goes to Mexico and ends up in Pancho Villa's army.
