--- a/kb.html
+++ b/kb.html
@@ -5103,6 +5103,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Fantastic Comics</td>
+<td>1939</td>
+<td>Fox</td>
+<td><a href="FantasticComics/FantasticComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fantastic Fears</td>
 <td>1954</td>
 <td>Farrell</td>
@@ -9104,6 +9111,13 @@ Creative Knowledgebase<br>
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="MysTech/MysTech.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mysteries of Unexplored Worlds</td>
+<td>1956</td>
+<td>Charlton</td>
+<td><a href="MysteriesOfUnexploredWorlds/MysteriesOfUnexploredWorlds.html">Details</a></td>
 </tr>
 
 <tr>
