--- a/Meltdown/Meltdown.html
+++ b/Meltdown/Meltdown.html
@@ -2,19 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Meltdown</title>
 </head>
 
 <body>
-<h2>Meltdown Wolverine and Havok</h2>
-<img src="Meltdown001.jpg"> 
-<img src="Meltdown002.jpg"> <br>
-<img src="Meltdown003.jpg"> 
-<img src="Meltdown004.jpg"> <br>
+<img src="Meltdown001.jpg"><br>
 Series: 4 issue mini series<br>
 Publisher: Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Meltdown001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Meltdown002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Meltdown003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Meltdown004.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Havok and Wolverine, X-Men both, are on vacation in Mexico, apparently having challenged each other to go the entire vacation without using their powers. First to lose buys the beer for the rest of the trip. But even not using his claws, Wolverine manages to end up in trouble. A band of thugs show up at their motel room looking for a fight so Havok and Wolverine take off in the first car they see. Unfortunately, it belongs to a woman in the parking lot. To keep her from getting shot by the guns the thugs are firing, they tell her to hop in and they run.
 </p><p>
 Wouldn’t you know it, the woman who owns the car is in on a scam to kidnap Havok and kill Wolverine. Unfortunately, Wolverine’s mutant healing ability is stronger than the fifteen darts filled with bubonic plague he is shot up with and, despite their intentions, he makes it.
