--- a/Ghost/Ghost.html
+++ b/Ghost/Ghost.html
@@ -2,18 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Ghost</title>
 </head>
 
 <body>
-<img src="Ghost.jpg"> <br>
-Series: 36 issues 1995<br>
-Publisher: Dark Horse<br>
+<img src="Ghost01.jpg"> <br>
+36 issues 1995 by Dark Horse<br>
 Written by Eric Luke<br>
-Art by Adam Hughes and Mark Farmer<br>
 Cover by Adam Hughes<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Ghost01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ghost02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ghost03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ghost04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ghost05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ghost06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ghost07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ghost08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ghost09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ghost10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Being new to the world of the living dead, Ghost is asking several questions of herself: Why was I killed? Who killed me? Why do I hate so much? Ghost begins to search for answers by investigating the life of her sister Margo, but once she learns her sibling's dark secret, she may want to mind her own business
 </p>
 
