--- a/kb.html
+++ b/kb.html
@@ -8906,7 +8906,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Moon Knight</td>
 <td>1980</td>
-<td>Mavrel</td>
+<td>Marvel</td>
 <td><a href="MoonKnight/MoonKnight.html">Details</a></td>
 </tr>
 
