--- a/Eternals/Eternals.html
+++ b/Eternals/Eternals.html
@@ -2,16 +2,54 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>the Eternals</title>
 </head>
 
 <body>
-<h2>the Eternals</h2>
-<img src="Eternals.jpg"> <br>
-Series: 19 issues 1976<br>
+<img src="Eternals01.jpg"> <br>
+Series: 19 issues 1976-1978, 12 issues 1985 - 1986, 7 issues 2006-2007, 9 issues 2008<br>
 Publisher: Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Eternals01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Eternals25.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 "The Day of the Gods." Written by Jack Kirby. Pencils by Jack Kirby. Inks by John Verpoorten. 
 </p><p>
 What if all the stories were true? All myths...all the legends... What if all the stories about gods and monsters were true? For archeologist Doctor Damian and his daughter Margo, those legends are about to become reality. The gods are real and they've lived among us for centuries. 1st appearance of Ikaris, Makkari, Kro and the Eternals as a team. 
