--- a/AmericanFlagg/AmericanFlagg.html
+++ b/AmericanFlagg/AmericanFlagg.html
@@ -2,19 +2,70 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>American Flagg</title>
 </head>
 
 <body>
-<img src="AmericanFlagg.jpg">
-<img src="AmericanFlagg01.jpg"> <br>
-Series: 50 issues 1983 - 1989<br>
-Illustrator: Howard Chaykin<br>
-Writer: Howard Chaykin<br>
-Publisher: First Comics<br>
+<img src="AmericanFlagg01.jpg"><br>
+Series: 50 issues 1983 - 1989 by First Comics<br>
+Writer &anp; Illustrator: Howard Chaykin<br>
 <p>
-About:<br>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198801.jpg"></div>
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 American Flagg! is an American comic book series created by writer-artist Howard Chaykin, published by First Comics from 1983 to 1989. A science fiction series and political satire, it was set in the U.S., particularly Chicago, Illinois, in the early 2030s. Writers besides Chaykin included Steven Grant, J.M. DeMatteis, and Alan Moore.
 </p><p>
 Story:<br>
