--- a/ConanTheBarbarian/ConanTheBarbarian.html
+++ b/ConanTheBarbarian/ConanTheBarbarian.html
@@ -8,19 +8,9 @@
 </head>
 
 <body>
-Conan the Barbarian<br>
-<img src="ConanTheBarbarian001.jpg"> <br>
-Publisher: 1970 Marvel<br>
+<img src="ConanTheBarbarian001.jpg" title="Conan the Barbarian #1 cover by Barry Windsor Smith"> <br>
+275 issues 1970 - 1994 Marvel<br>
 <p>
-Conan is a fictional character based on Robert E. Howard's Conan the Barbarian. He was introduced to the comic book world in 1970 with Conan the Barbarian, written by Roy Thomas, illustrated by Barry Smith and published by Marvel Comics.
-</p><p>
-The highly successful Conan the Barbarian series spawned the more adult, black-and-white Savage Sword of Conan in 1974 (published as part of Marvel's line of black-and-white magazines). Written by Thomas with most art by John Buscema or Alfredo Alcala, Savage Sword of Conan soon became one of the most popular comic series of the 1970s and is now considered a cult classic.
-</p><p>
-The Marvel Conan stories were also adapted as a newspaper comic strip which appeared daily and Sunday from September 4, 1978, to April 12, 1981. Originally written by Thomas and illustrated by Buscema, the strip was continued by several different Marvel artists and writers.
-</p><p>
-Marvel ceased publishing all Conan titles in 2000. In 2003, Dark Horse Comics acquired the license to publish the character.
-</p><p>
-
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor"></div></div>
 <div id="myModal" class="modal">
@@ -132,6 +122,16 @@ Marvel ceased publishing all Conan titles in 2000. In 2003, Dark Horse Comics ac
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
 </div>
+
+</p><p>
+Conan is a fictional character based on Robert E. Howard's Conan the Barbarian. He was introduced to the comic book world in 1970 with Conan the Barbarian, written by Roy Thomas, illustrated by Barry Smith and published by Marvel Comics.
+</p><p>
+The highly successful Conan the Barbarian series spawned the more adult, black-and-white Savage Sword of Conan in 1974 (published as part of Marvel's line of black-and-white magazines). Written by Thomas with most art by John Buscema or Alfredo Alcala, Savage Sword of Conan soon became one of the most popular comic series of the 1970s and is now considered a cult classic.
+</p><p>
+The Marvel Conan stories were also adapted as a newspaper comic strip which appeared daily and Sunday from September 4, 1978, to April 12, 1981. Originally written by Thomas and illustrated by Buscema, the strip was continued by several different Marvel artists and writers.
+</p><p>
+Marvel ceased publishing all Conan titles in 2000. In 2003, Dark Horse Comics acquired the license to publish the character.
+</p>
 
 <ul>
 <li><a href="ConanTheBarbarian001.html">Conan The Barbarian #1</a></li>
