--- a/Conan/Conan.html
+++ b/Conan/Conan.html
@@ -2,17 +2,73 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Conan</title>
 </head>
 
 <body>
-<h2>Conan</h2>
-<img src="WeirdTales1932.jpg"> 
-<img src="TalesOfConan1955.jpg"> 
-<img src="Conan001.jpg"> <br>
-Publishers: 1932 Weird Tales. 1970 Marvel Comics. 1982 Universal Pictures. 2003 Dark Horse Comics.<br>
+Conan<br>
+<img src="WeirdTales1932.jpg"><br>
+1932 Weird Tales. 1970 Marvel Comics. 1982 Universal Pictures. 2003 Dark Horse Comics.<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesOfConan1955.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook020.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook021.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook022.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook023.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook024.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook025.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook026.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook027.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook028.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook029.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook030.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook031.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook032.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook033.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook034.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook035.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook036.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook037.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook038.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook039.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanBook040.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanDH01.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Conan the Barbarian (also known as Conan the Cimmerian) is a fictional sword and sorcery hero who originated in pulp-fiction magazines and has since been adapted to books, comics, several films (including Conan the Barbarian and Conan the Destroyer), television programs (cartoon and live-action), video games, role-playing games, and other media. 
 </p><p>
 The character was created by writer Robert E. Howard in 1932 in a series of fantasy stories published in Weird Tales magazine, the first of which was entitled "The Phoenix on the Sword".
@@ -34,6 +90,13 @@ A sixth series, titled Conan the Avenger, started publishing in April 2014 and e
 A seventh series, titled Conan the Slayer lasted 12 issues from July 2016 to August 2017. Dark Horse has also published half a dozen one-shots and almost a dozen mini-series.
 </p><p>
 Dark Horse has also published collections of the original Marvel Comics Conan the Barbarian, The Savage Sword of Conan and King Conan series in graphic novel format.
+</p><p>
+
+Other Conan titles:<ul>
+<li><a href="../ConanTheBarbarian/ConanTheBarbarian.html">Conan the Barbarian</a> 1970 - 1994 Marvel Comics
+<li><a href="../SavageSwordOfConan/SavageSwordOfConan.html">Savage Sword of Conan</a> 1974 - 1995 Marvel Comics
+<li><a href="../ConanTheLegend/ConanTheLegend.html">Conan the Legend</a> 2003 Dark Horse
+<li><a href="../ConanBookOfThoth/ConanBookOfThoth.html">Conan Book of Thoth</a> 2006 Dark Horse
 </p>
 
 </body>
