--- a/Conan/Conan.html
+++ b/Conan/Conan.html
@@ -62,7 +62,6 @@ Conan<br>
 <div class="mySlides" style="text-align: center;"><img src="ConanBook038.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ConanBook039.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ConanBook040.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanDH01.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -96,6 +95,7 @@ Other Conan titles:<ul>
 <li><a href="../ConanTheBarbarian/ConanTheBarbarian.html">Conan the Barbarian</a> 1970 - 1994 Marvel Comics
 <li><a href="../SavageSwordOfConan/SavageSwordOfConan.html">Savage Sword of Conan</a> 1974 - 1995 Marvel Comics
 <li><a href="../ConanTheLegend/ConanTheLegend.html">Conan the Legend</a> 2003 Dark Horse
+<li><a href="../Conan2004/Conan2004.html">Conan</a> 2004 Dark Horse
 <li><a href="../ConanBookOfThoth/ConanBookOfThoth.html">Conan Book of Thoth</a> 2006 Dark Horse
 </p>
 
