--- a/kb.html
+++ b/kb.html
@@ -3350,6 +3350,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Conan</td>
+<td>2004</td>
+<td>Dark Horse</td>
+<td><a href="Conan2004/Conan2004.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Conan the Barbarian</td>
 <td>1970</td>
 <td>Marvel</td>
